[gd_scene load_steps=6 format=3 uid="uid://c5etif5ubtq03"]

[ext_resource type="Texture2D" uid="uid://dpck625gx5thf" path="res://Assets/Bakery.png" id="1_g0ogd"]
[ext_resource type="Script" path="res://Entities/bakery.gd" id="1_ghy1v"]
[ext_resource type="PackedScene" uid="uid://bvasesvglgdqi" path="res://Entities/confetti.tscn" id="3_14xm1"]
[ext_resource type="AudioStream" uid="uid://c8jg7e7enfifg" path="res://Assets/Audio/Victory-jingle.mp3" id="4_tb662"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fl6q6"]
size = Vector2(112, 112)

[node name="Bakery" type="Node2D"]
script = ExtResource("1_ghy1v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-8.00006, 0)
scale = Vector2(4, 4)
texture = ExtResource("1_g0ogd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-8, 8)
shape = SubResource("RectangleShape2D_fl6q6")

[node name="Confetti" parent="." instance=ExtResource("3_14xm1")]
visible = false
position = Vector2(-128, -16)

[node name="Confetti2" parent="." instance=ExtResource("3_14xm1")]
visible = false
position = Vector2(-80, -88)

[node name="Confetti3" parent="." instance=ExtResource("3_14xm1")]
visible = false
position = Vector2(72, -80)

[node name="Confetti4" parent="." instance=ExtResource("3_14xm1")]
visible = false
position = Vector2(120, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tb662")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
